# converter-test-task

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 3b2a0c776fcc_empty_migration.py
src/: app.py  config.py  database.py  main.py
